[gd_scene load_steps=19 format=2]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scenes/level2.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/images/screens/start_screen.png" type="Texture" id=3]
[ext_resource path="res://data/images/screens/controls_page.png" type="Texture" id=4]
[ext_resource path="res://data/images/screens/game_over_screen.png" type="Texture" id=5]
[ext_resource path="res://data/images/screens/game_won_screen.png" type="Texture" id=6]
[ext_resource path="res://data/images/screens/credits_screen.png" type="Texture" id=7]
[ext_resource path="res://data/fonts/ariblk.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://data/sound/music/old/Homelander.ogg" type="AudioStream" id=9]
[ext_resource path="res://data/sound/music/old/Griphop.ogg" type="AudioStream" id=10]
[ext_resource path="res://data/sound/music/old/Level_Up.ogg" type="AudioStream" id=11]
[ext_resource path="res://data/sound/music/old/Lewis_and_Dekalb.ogg" type="AudioStream" id=12]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]

size = 100
use_mipmaps = false
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=5]

size = 55
use_mipmaps = false
use_filter = false
font_data = ExtResource( 8 )

[node name="game" type="Node"]

pause_mode = 2
script = ExtResource( 1 )

[node name="level2" parent="." instance=ExtResource( 2 )]


[node name="current_screen" type="AnimatedSprite" parent="."]

z = 5
frames = SubResource( 1 )
animation = "default"
centered = false

[node name="score_label" type="Label" parent="current_screen"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 571.0
margin_top = 298.0
margin_right = 1150.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.0860596, 0.255041, 0.917969, 1 )
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="start_hs" type="Label" parent="current_screen"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 16.0
margin_top = 473.0
margin_right = 1185.0
margin_bottom = 572.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.980469, 0.402175, 0.0191498, 1 )
text = "HIGH SCORE: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="go_score" type="Label" parent="current_screen"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 13.0
margin_top = 484.0
margin_right = 1188.0
margin_bottom = 596.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.800781, 0, 0, 1 )
text = "SCORE: 0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="winner_hs" type="Label" parent="current_screen"]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
margin_left = 568.0
margin_top = 471.0
margin_right = 1178.0
margin_bottom = 582.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "HIGH SCORE: 0"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="keypress_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.3
one_shot = true
autostart = false

[node name="level_list" type="Node" parent="."]


[node name="tracklist" type="Node" parent="."]


[node name="track1" type="AudioStreamPlayer" parent="tracklist"]

stream = ExtResource( 9 )
playing = false
loop = true
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="track2" type="AudioStreamPlayer" parent="tracklist"]

stream = ExtResource( 10 )
playing = false
loop = true
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="track3" type="AudioStreamPlayer" parent="tracklist"]

stream = ExtResource( 11 )
playing = false
loop = true
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[node name="track4" type="AudioStreamPlayer" parent="tracklist"]

stream = ExtResource( 12 )
playing = false
loop = true
volume_db = 0.0
stream_autoplay = false
stream_paused = false
loop_restart_time = 0.0
buffering_ms = 500

[connection signal="timeout"  from="keypress_timer"  to="." method="_on_keypress_timer_timeout" binds=[  ]]
